# nl-attendance-timesheet

./: .gitignore  README.md  pyproject.toml
nl_attendance_timesheet/: hooks.py  modules.txt  patches.txt
nl_attendance_timesheet/config/: desktop.py  docs.py
nl_attendance_timesheet/controllers/: add_attendance_to_salary_slip.py  calculate_duration.py  generate_overtime_timesheets.py  get_employee_attendance.py
nl_attendance_timesheet/controllers/tests/: test_add_attendance_to_salary_slip.py  test_generate_overtime_timesheets.py  test_get_employee_attendance.py
nl_attendance_timesheet/nl_attendance_timesheet/doctype/holiday_overtime/: holiday_overtime.json  holiday_overtime.py
nl_attendance_timesheet/nl_attendance_timesheet/doctype/navari_custom_payroll_settings/: navari_custom_payroll_settings.js  navari_custom_payroll_settings.json  navari_custom_payroll_settings.py  test_navari_custom_payroll_settings.py
nl_attendance_timesheet/nl_attendance_timesheet/doctype/regular_overtime/: regular_overtime.json  regular_overtime.py
nl_attendance_timesheet/nl_attendance_timesheet/doctype/timesheet_center/: test_timesheet_center.py  timesheet_center.js  timesheet_center.json  timesheet_center.py
nl_attendance_timesheet/nl_attendance_timesheet/patches/: overtime_threshold.py  payment_hours_custom_field.py  salary_slip_custom_fields.py  shift_type_custom_fields.py  timesheet_custom_fields.py
nl_attendance_timesheet/public/js/: payroll_entry.js  salary_structure.js
