[project]
name = "nl_attendance_timesheet"
authors = [
    { name = "Navari Ltd", email = "cheptoek@navari.co.ke"}
]
description = "Navari Attendance Timesheet"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
